Edited image and link colors

--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <style>
+    Img{
+        width:300px;
+        height: 300px;
+    }
+    .crvena{
+        color:red;
+    }
+    </style>
 </head>
 <body>
     <section>
         <img src="https://www.hrcloud.com/hubfs/onboarding_wide.jpg?t=1543508356328" alt="home workspace">
         <h1>Onboarding Best Practices: The 4C's</h1>
 
-        <a href="https://www.google.com">Onboard</a>
+        <a href="https://www.google.com" class="crvena">Onboard</a>
         <a href="https://www.google.com">Human Recources</a>
-        <a href="https://www.google.com">Tips</a>
+        <a href="https://www.google.com" class="crvena">Tips</a>
 
         <p>As an HR professional, you're well acquainted with the practice of onboarding.
             But if your company has never made doing
@@ -26,7 +36,7 @@
             how to do it effectively using the four C's approach. Let's jump in!
    
         </p>
-        
+
         <button>Read more</button>
    
     </section>
