--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <title>Document</title>
 
     <style>
-    Img{
+    img{
         width:300px;
         height: 300px;
     }
     .crvena{
         color:red;
     }
+    button{
+        color: red;
+    }
+    body{
+        font-family:"Arial";
+    }
+    a{
+        font-family:"Arial-black";
+    }
     </style>
+
 </head>
 <body>
     <section>
